--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>NL Civic Tech Unconference 2019</h1>
+<h1>Public Tech</h1>
+
+<h2>NL Civic Tech Unconference 2019</h2>
+
+<p>Public Tech is de gezamenlijke unconference van Nederlandse civic tech organisaties in oktober of november 2019 (exacte datum binnenkort bekend).</p>
+
+<p>Op de hoogte blijven? Stuur een mail naar <a href="info@codefor.nl">info@codefor.nl</a></p>
