--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<h1>Public Tech</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://www.codefor.nl/css/reset.css" type="text/css" media="all">
+    <link rel="stylesheet" href="https://www.codefor.nl/css/style.css" type="text/css" media="all">
+  </head>
+  <body>
+    <h1>Public Tech</h1>
 
-<h2>Unconference 2019</h2>
+    <h2>Unconference 2019</h2>
 
-<p>Public Tech is de gezamenlijke unconference van Nederlandse #civictech en open #govtech organisaties. Deze vindt plaats in oktober of november 2019 (exacte datum binnenkort bekend).</p>
+    <p>Public Tech is de gezamenlijke unconference van Nederlandse #civictech en open #govtech organisaties. Deze vindt plaats in oktober of november 2019 (exacte datum binnenkort bekend).</p>
 
-<p>Op de hoogte blijven? Stuur een mail naar <a href="info@codefor.nl">info@codefor.nl</a></p>
+    <p>Op de hoogte blijven? Stuur een mail naar <a href="info@codefor.nl">info@codefor.nl</a></p>
+  </body>
+</html>
