--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <p>Public Tech is de gezamenlijke unconference van Nederlandse #civictech en open #govtech organisaties. Deze vindt plaats in oktober of november 2019 (exacte datum binnenkort bekend).</p>
 
     <p>Op de hoogte blijven? Stuur een mail naar <a href="info@codefor.nl">info@codefor.nl</a></p>
+    
+    <h2>Organisaties</h2>
+    
+    <ul>
+      <li><a href="https://www.codefor.nl">Stichting Code for NL</a></li>
+      <li><a href="https://openstate.eu/nl/">Open State Foundation</a></li>
+    </ul>
   </body>
 </html>
