--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>Op de hoogte blijven? Stuur een mail naar <a href="info@codefor.nl">info@codefor.nl</a></p>
     
-    <h2>Organisaties</h2>
+    <h2>Organisatie</h2>
     
     <ul>
       <li><a href="https://www.codefor.nl">Stichting Code for NL</a></li>
